JPMS: adjustments
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>